Looks like the OpenMMBenchmark is in the end, much better behaved

--- a/core/openmm_core/CMakeLists.txt
+++ b/core/openmm_core/CMakeLists.txt
@@ -4,7 +4,7 @@ endif()
 
 find_package(OpenMM REQUIRED)
 include_directories(${OPENMM_INCLUDE_DIRS})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../benchmark)
+#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../benchmark)
 
 file(GLOB OpenMMCoreSources "*.cpp")
 list(REMOVE_ITEM OpenMMCoreSources main.cpp)
@@ -24,20 +24,13 @@ if(CORE_TYPE STREQUAL "CPU")
     add_definitions(-DUSE_PME_PLUGIN)
     add_definitions(-DOPENMM_CPU)
     if(BUILD_BENCHMARK)
-        add_dependencies(${CORE_NAME} Benchmark)
         add_definitions(-DUSE_BENCHMARK)
-        include_directories(${FFTW_INCLUDE_DIRS}) 
-        set(ADDITIONAL_LIBRARIES Benchmark ${ADDITIONAL_LIBRARIES})
     endif()
 elseif(CORE_TYPE STREQUAL "OpenCL")
     set(ADDITIONAL_LIBRARIES ${OPENCL_LIBRARIES})
     add_definitions(-DOPENMM_OPENCL)
     if(BUILD_BENCHMARK)
-        add_dependencies(${CORE_NAME} Benchmark)
         add_definitions(-DUSE_BENCHMARK)
-        include_directories(${CMAKE_CURRENT_BINARY_DIR}/../clfft_install/include)
-        include_directories(${OPENCL_INCLUDE_DIRS})
-        set(ADDITIONAL_LIBRARIES Benchmark ${CMAKE_CURRENT_BINARY_DIR}/../clfft_install/lib64/import/libclFFT.a ${ADDITIONAL_LIBRARIES})
     endif()
 elseif(CORE_TYPE STREQUAL "CUDA")
     set(CUDA_DRIVER_PATH "/usr/lib/nvidia-current/" CACHE STRING "Driver Location")
