Prepare mongodb layouts

--- a/cc.conf
+++ b/cc.conf
@@ -12,8 +12,7 @@ redis_options = {
 }
 
 mongo_options = {
-    'host': 'localhost',
-    'port': 27017
+    'host': 'localhost:27017',
 }
 
 cc_pass = 'PROTOSS_IS_FOR_NOOBS'
