--- a/ws.conf
+++ b/ws.conf
@@ -12,8 +12,7 @@ redis_options = {
 }
 
 mongo_options = {
-    'host': 'localhost',
-    'port': 27017
+    'host': 'localhost:27017',
 }
 
 external_options = {
