Shove all internal files to a special data folder

--- a/ws.conf
+++ b/ws.conf
@@ -6,9 +6,9 @@ ssl_ca_certs = 'certs/incommon_ca.pem'
 
 redis_options = {
     'port': 4740,
-    'appendfilename': 'aof_',
+    'appendfilename': 'db_appendfile',
     'requirepass': 'secret_ninja_pass',
-    'logfile': 'db_log_',
+    'logfile': 'db_logfile',
 }
 
 mongo_options = {
