--- a/cc.conf
+++ b/cc.conf
@@ -6,9 +6,9 @@ ssl_ca_certs = 'certs/incommon_ca.pem'
 
 redis_options = {
     'port': 4776,
-    'appendfilename': 'db_appendfile',
+    'appendfilename': 'db.aof',
     'requirepass': 'somerandompass',
-    'logfile': 'db_logfile',
+    'logfile': 'db.log',
 }
 
 mongo_options = {
