This commit breaks everything

--- a/cc.conf
+++ b/cc.conf
@@ -3,16 +3,15 @@ internal_http_port = 8980
 ssl_certfile = 'certs/public.crt'
 ssl_key = 'certs/private.pem'
 ssl_ca_certs = 'certs/incommon_ca.pem'
+external_host = '127.0.0.1:8980'
 
 redis_options = {
     'port': 4776,
-    'appendfilename': 'db.aof',
+    'appendfilename': 'redis.aof',
     'requirepass': 'somerandompass',
-    'logfile': 'db.log',
+    'logfile': 'redis.log',
 }
 
 mongo_options = {
     'host': 'localhost:27017',
 }
-
-cc_pass = 'PROTOSS_IS_FOR_NOOBS'
