--- a/scv.conf
+++ b/scv.conf
@@ -3,26 +3,15 @@ internal_http_port = 8960
 ssl_certfile = 'certs/public.crt'
 ssl_key = 'certs/private.pem'
 ssl_ca_certs = 'certs/incommon_ca.pem'
+external_host = '127.0.0.1:8960'
 
 redis_options = {
     'port': 4740,
-    'appendfilename': 'db.aof',
+    'appendfilename': 'redis.aof',
     'requirepass': 'secret_ninja_pass',
-    'logfile': 'db.log',
+    'logfile': 'redis.log',
 }
 
 mongo_options = {
     'host': 'localhost:27017',
-}
-
-external_options = {
-    'external_url': '127.0.0.1',
-    'external_http_port': '8960'
-}
-
-command_centers = {
-    'flash': {
-        'url': '127.0.0.1:8980',
-        'pass': 'PROTOSS_IS_FOR_NOOBS',
-    },
 }
