--- a/circle.yml
+++ b/circle.yml
@@ -18,8 +18,9 @@ dependencies:
     - pip install requests
     - pip install redis
     - pip install bcrypt
-    - pip install pymongo
+    - pip install pymongo==2.7
     - pip install sphinx
+    - pip install motor==0.2
     - cmake --version
     - if [[ ! -e poco-1.5.2-all ]]; then wget http://pocoproject.org/releases/poco-1.5.2/poco-1.5.2-all.tar.gz && tar xvf poco-1.5.2-all.tar.gz; fi
     - cd poco-1.5.2-all && ./configure --no-samples --no-tests --static --prefix=/home/ubuntu/poco152_install --omit=Data/MySQL,Data/ODBC && make -j4 && make install;
