--- a/cc.conf
+++ b/cc.conf
@@ -1,6 +1,9 @@
 name = 'flash'
 internal_http_port = 8980
 external_host = '127.0.0.1:8980'
+ssl_certfile = 'certs/public.crt'
+ssl_key = 'certs/private.pem'
+ssl_ca_certs = 'certs/incommon_ca.pem'
 
 redis_options = {
     'port': 4776,
