WIP multiple OpenCL devices

--- a/core/openmm_core/CMakeLists.txt
+++ b/core/openmm_core/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(OpenMM REQUIRED)
 include_directories(${OPENMM_INCLUDE_DIRS})
 
 file(GLOB OpenMMCoreSources "*.cpp")
+message(STATUS ${OpenMMCoreSources})
 list(REMOVE_ITEM OpenMMCoreSources main.cpp)
 
 set(CORE_TYPE "CPU" CACHE STRING "Core type: CPU, OpenCL, or CUDA")
@@ -23,6 +24,9 @@ if(CORE_TYPE STREQUAL "CPU")
     add_definitions(-DUSE_PME_PLUGIN)
     add_definitions(-DOPENMM_CPU)
 elseif(CORE_TYPE STREQUAL "OpenCL")
+    find_package(OpenCL REQUIRED)
+    message(STATUS "DEBUG!" ${OPENCL_INCLUDE_DIRS})
+    include_directories(${OPENCL_INCLUDE_DIRS})
     set(ADDITIONAL_LIBRARIES ${OPENCL_LIBRARIES})
     add_definitions(-DOPENMM_OPENCL)
 elseif(CORE_TYPE STREQUAL "CUDA")
