--- a/circle.yml
+++ b/circle.yml
@@ -35,8 +35,9 @@ dependencies:
 
 test:
   post:
-    - cd core/build; ../tests/start_services
-    - cd core/build; make test; ../tests/stop_services
+    - ./tests/start_services
+    - cd core/build; make test; 
+    - ./tests/stop_services
 
 deployment:
   production:
