Config file fixes and exit callback fixes

--- a/cc.conf
+++ b/cc.conf
@@ -1,6 +1,6 @@
 name = 'flash'
 internal_http_port = 8980
-external_host = '127.0.0.1:8980'
+
 ssl_certfile = 'certs/public.crt'
 ssl_key = 'certs/private.pem'
 ssl_ca_certs = 'certs/incommon_ca.pem'
@@ -14,4 +14,5 @@ redis_options = {
 
 mongo_options = {
     'host': 'localhost:27017',
+    # 'replicaSet': 'rs' 
 }
