Add CUDA platform

--- a/core/openmm_core/CMakeLists.txt
+++ b/core/openmm_core/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(${CORE_NAME} main.cpp)
 
 set(CPU_ENGINE_KEY 86f094c5-b76a-460e-9335-61eb0c76643b)
 set(OPENCL_ENGINE_KEY 3ca62f73-3979-4eb2-a302-d891ad75b70b)
+set(CUDA_ENGINE_KEY 91c5e3f7-f6fa-446b-843c-e94bf5ed49e5)
 
 if(CORE_TYPE STREQUAL "CPU")
     set(ADDITIONAL_LIBRARIES ${FFTW_LIBRARIES})
@@ -43,10 +44,10 @@ elseif(CORE_TYPE STREQUAL "OpenCL")
     set(ADDITIONAL_LIBRARIES ${OPENCL_LIBRARIES})
     add_definitions(-DOPENMM_OPENCL)
 elseif(CORE_TYPE STREQUAL "CUDA")
+    add_definitions(-DENGINE_KEY="${CUDA_ENGINE_KEY}")
     set(CUDA_DRIVER_PATH "/usr/lib/nvidia-current/" CACHE STRING "Driver Location")
-    set(CUFFT_PATH "/usr/local/cuda/lib64" CACHE STRING "CUFFT Location")
+    set(CUFFT_PATH "/usr/local/cuda/lib64/libcufft.so" CACHE STRING "CUFFT Location")
     link_directories(${CUDA_DRIVER_PATH})
-    link_directories(${CUFFT_PATH})
     set(ADDITIONAL_LIBRARIES cuda cufft)
     add_definitions(-DOPENMM_CUDA)
 else()
