--- a/core/openmm_core/CMakeLists.txt
+++ b/core/openmm_core/CMakeLists.txt
@@ -20,44 +20,44 @@ enable_testing()
 
 if(BUILD_FAH_CORE)
     add_definitions(-DFAH_CORE)
-    set(CORE_NAME ocore_601_${CORE_TYPE}_v${CORE_VERSION}_fah)
+    set(CORE_NAME core19_601)
 else()
-    set(CORE_NAME ocore_601_${CORE_TYPE}_v${CORE_VERSION})
+    set(CORE_NAME ocore_601)
 endif()
-
-add_executable(${CORE_NAME} main.cpp)
 
 set(CPU_ENGINE_KEY 86f094c5-b76a-460e-9335-61eb0c76643b)
 set(OPENCL_ENGINE_KEY 3ca62f73-3979-4eb2-a302-d891ad75b70b)
 set(CUDA_ENGINE_KEY 91c5e3f7-f6fa-446b-843c-e94bf5ed49e5)
 
-if(CORE_TYPE STREQUAL "CPU")
-    set(ADDITIONAL_LIBRARIES ${FFTW_LIBRARIES})
-    add_definitions(-DENGINE_KEY="${CPU_ENGINE_KEY}")
-    add_definitions(-DUSE_PME_PLUGIN)
-    add_definitions(-DOPENMM_CPU)
-elseif(CORE_TYPE STREQUAL "OpenCL")
-    add_definitions(-DENGINE_KEY="${OPENCL_ENGINE_KEY}")
-    find_package(OpenCL REQUIRED)
-    message(STATUS "DEBUG!" ${OPENCL_INCLUDE_DIRS})
-    include_directories(${OPENCL_INCLUDE_DIRS})
-    set(ADDITIONAL_LIBRARIES ${OPENCL_LIBRARIES})
-    add_definitions(-DOPENMM_OPENCL)
-elseif(CORE_TYPE STREQUAL "CUDA")
-    add_definitions(-DENGINE_KEY="${CUDA_ENGINE_KEY}")
-    set(CUDA_DRIVER_PATH "/usr/lib/nvidia-current/" CACHE STRING "Driver Location")
-    set(CUFFT_PATH "/usr/local/cuda/lib64/libcufft.so" CACHE STRING "CUFFT Location")
-    link_directories(${CUDA_DRIVER_PATH})
-    set(ADDITIONAL_LIBRARIES cuda cufft)
-    add_definitions(-DOPENMM_CUDA)
-else()
-    message(FATAL_ERROR "Bad CORE_TYPE" )
+set(BUILD_CPU ON CACHE BOOL "Whether to build CPU core or not")
+set(BUILD_OPENCL ON CACHE BOOL "Whether to build OpenCL core or not")
+set(BUILD_CUDA ON CACHE BOOL "Whether to build CUDA core or not")
+
+set(OPENMM_CORE_DEPENDENCIES ${CMAKE_THREAD_LIBS_INIT} ${POCO_LIBRARIES} ${OPENSSL_LIBRARIES} ${OPENMM_LIBRARIES} dl)
+
+if(BUILD_CPU)
+    set(CPU_CORE_NAME ${CORE_NAME}_CPU_v${CORE_VERSION})
+    add_executable(${CPU_CORE_NAME} main.cpp ${OpenMMCoreSources})
+    set_target_properties(${CPU_CORE_NAME} PROPERTIES COMPILE_DEFINITIONS "ENGINE_KEY=\"${CPU_ENGINE_KEY}\";USE_PME_PLUGIN;OPENMM_CPU")
+    target_link_libraries(${CPU_CORE_NAME} Core ${OPENMM_CORE_DEPENDENCIES} ${FFTW_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 endif()
 
-set(OPENMM_CORE_DEPENDENCIES ${CMAKE_THREAD_LIBS_INIT} ${POCO_LIBRARIES} ${OPENSSL_LIBRARIES} ${OPENMM_LIBRARIES} ${ADDITIONAL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} dl)
-mark_as_advanced(OPENMM_CORE_DEPENDENCIES)
+if(BUILD_OPENCL)
+    set(OPENCL_CORE_NAME ${CORE_NAME}_OpenCL_v${CORE_VERSION})
+    add_executable(${OPENCL_CORE_NAME} main.cpp  ${OpenMMCoreSources})
+    set_target_properties(${OPENCL_CORE_NAME} PROPERTIES COMPILE_DEFINITIONS "ENGINE_KEY=\"${OPENCL_ENGINE_KEY}\";OPENMM_OPENCL")
+    find_package(OpenCL REQUIRED)
+    include_directories(${OPENCL_INCLUDE_DIRS})
+    target_link_libraries(${OPENCL_CORE_NAME} Core ${OPENMM_CORE_DEPENDENCIES} ${OPENCL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+endif()
 
-add_library(OpenMMCore STATIC ${OpenMMCoreSources})
+if(BUILD_CUDA)
+    set(CUDA_CORE_NAME ${CORE_NAME}_CUDA_v${CORE_VERSION})
+    add_executable(${CUDA_CORE_NAME} main.cpp ${OpenMMCoreSources})
+    set_target_properties(${CUDA_CORE_NAME} PROPERTIES COMPILE_DEFINITIONS "ENGINE_KEY=\"${CUDA_ENGINE_KEY}\";OPENMM_CUDA")
+    set(CUDA_DRIVER_PATH "/usr/lib/libcuda.so" CACHE STRING "CUDA Driver Location")
+    set(CUFFT_PATH "/usr/local/cuda/lib64/libcufft.so" CACHE STRING "CUFFT Location")
+    target_link_libraries(${CUDA_CORE_NAME} Core ${OPENMM_CORE_DEPENDENCIES} ${CUFFT_PATH} ${CUDA_DRIVER_PATH} ${CMAKE_THREAD_LIBS_INIT})
+endif()
 
-target_link_libraries(${CORE_NAME} OpenMMCore Core ${OPENMM_CORE_DEPENDENCIES})
-add_subdirectory(tests)
+# add_subdirectory(tests)
