--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -2,14 +2,19 @@ cmake_minimum_required (VERSION 2.8.5)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
 set(OPENCL_ROOT /usr/local/cuda CACHE PATH "OpenCL Directory")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
 
 find_package(POCO REQUIRED)
+
+if(WIN32)
+	set(ENV{OPENSSL_ROOT_DIR} "C:/Libs/openssl")
+endif()
+
 find_package(OpenSSL REQUIRED)
-find_package(FFTW REQUIRED)
 find_package(Threads REQUIRED)
 
 include_directories(${POCO_INCLUDE_DIRS})
-
+include_directories(${OPENSSL_INCLUDE_DIR})
 include_directories(base)
 set(CORE_ROOT_DIR ${CMAKE_CURRENT_BINARY_DIR})
 
