--- a/core/openmm_core/CMakeLists.txt
+++ b/core/openmm_core/CMakeLists.txt
@@ -29,13 +29,24 @@ set(CPU_ENGINE_KEY 86f094c5-b76a-460e-9335-61eb0c76643b)
 set(OPENCL_ENGINE_KEY 3ca62f73-3979-4eb2-a302-d891ad75b70b)
 set(CUDA_ENGINE_KEY 91c5e3f7-f6fa-446b-843c-e94bf5ed49e5)
 
-set(BUILD_CPU ON CACHE BOOL "Whether to build CPU core or not")
+if(UNIX)
+    set(BUILD_CPU ON CACHE BOOL "Whether to build CPU core or not")
+elseif(WIN32)
+    set(BUILD_CPU OFF CACHE BOOL "Whether to build CPU core or not")
+endif()
 set(BUILD_OPENCL ON CACHE BOOL "Whether to build OpenCL core or not")
 set(BUILD_CUDA ON CACHE BOOL "Whether to build CUDA core or not")
 
-set(OPENMM_CORE_DEPENDENCIES ${CMAKE_THREAD_LIBS_INIT} ${POCO_LIBRARIES} ${OPENSSL_LIBRARIES} ${OPENMM_LIBRARIES} dl)
+message(STATUS ${POCO_LIBRARIES})
+
+set(OPENMM_CORE_DEPENDENCIES ${CMAKE_THREAD_LIBS_INIT} ${POCO_LIBRARIES} ${OPENSSL_LIBRARIES} ${OPENMM_LIBRARIES})
+
+if(UNIX)
+    set(OPENMM_CORE_DEPENDENCIES ${OPENMM_CORE_DEPENDENCIES} dl)    
+endif()
 
 if(BUILD_CPU)
+    find_package(FFTW REQUIRED)
     set(CPU_CORE_NAME ${CORE_NAME}_CPU_v${CORE_VERSION})
     add_executable(${CPU_CORE_NAME} main.cpp ${OpenMMCoreSources})
     set_target_properties(${CPU_CORE_NAME} PROPERTIES COMPILE_DEFINITIONS "ENGINE_KEY=\"${CPU_ENGINE_KEY}\";USE_PME_PLUGIN;OPENMM_CPU")
