Build OpenSSL statically

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -2,15 +2,25 @@ cmake_minimum_required (VERSION 2.8.5)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
 set(OPENCL_ROOT /usr/local/cuda CACHE PATH "OpenCL Directory")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
 
 find_package(POCO REQUIRED)
 
 if(WIN32)
-	set(ENV{OPENSSL_ROOT_DIR} "C:/Libs/openssl")
+	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
 endif()
 
-find_package(OpenSSL REQUIRED)
+if(WIN32)
+	set(OPENSSL_ROOT_DIR "C:/Libs/openssl")
+else()
+	set(OPENSSL_ROOT_DIR "/home/yutong/openssl_install")
+	# set(OPENSSL_CRYPTO_LIB "/home/yutong/openssl_install/lib/")
+	# set(OPENSSL_LIBRARIES 
+endif()
+
+find_package(OpenSSL2 REQUIRED)
+
+message(STATUS "OPENSSL:" ${OPENSSL_LIBRARIES})
+
 find_package(Threads REQUIRED)
 
 include_directories(${POCO_INCLUDE_DIRS})
