--- a/core/tests/CMakeLists.txt
+++ b/core/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(TEST_DEPENDENCIES ${OPENSSL_LIBRARIES} ${POCO_LIBRARIES} ${OPENSSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
-if(WIN32)
+if(UNIX)
 	set(TEST_DEPENDENCIES ${TEST_DEPENDENCIES} dl)
 endif()
 
