--- a/core/openmm_core/CMakeLists.txt
+++ b/core/openmm_core/CMakeLists.txt
@@ -16,6 +16,12 @@ set(BUILD_FAH_CORE OFF CACHE BOOL "Whether or not to build as a FAHCore")
 set(CORE_VERSION 17 CACHE STRING "Core Version")
 add_definitions(-DCORE_VERSION=${CORE_VERSION})
 
+if(WIN32)
+    add_definitions(-DPTW32_STATIC_LIB)
+    add_definitions(-DLEPTON_USE_STATIC_LIBRARIES)
+    add_definitions(-DOPENMM_USE_STATIC_LIBRARIES)
+endif()
+
 enable_testing()
 
 if(BUILD_FAH_CORE)
@@ -42,7 +48,9 @@ message(STATUS ${POCO_LIBRARIES})
 set(OPENMM_CORE_DEPENDENCIES ${CMAKE_THREAD_LIBS_INIT} ${POCO_LIBRARIES} ${OPENSSL_LIBRARIES} ${OPENMM_LIBRARIES})
 
 if(UNIX)
-    set(OPENMM_CORE_DEPENDENCIES ${OPENMM_CORE_DEPENDENCIES} dl)    
+    set(OPENMM_CORE_DEPENDENCIES ${OPENMM_CORE_DEPENDENCIES} dl)
+else()
+    set(OPENMM_CORE_DEPENDENCIES ${OPENMM_CORE_DEPENDENCIES} Crypt32)
 endif()
 
 if(BUILD_CPU)
