--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ checkout:
 
 dependencies:
   pre:
-    - export $GOPATH=~/go/
+    - export GOPATH=~/go/
     - go get github.com/gorilla/mux"
     - gopkg.in/mgo.v2"
     - pip install -r requirements.txt
