--- a/circle.yml
+++ b/circle.yml
@@ -30,9 +30,10 @@ dependencies:
 
 test:
   override:
-    timeout: 1200
-    - cd scv/src; go test -v -timeout 20m
-    - cd scv/src; go test -race -v -timeout 20m
+    - cd scv/src; go test -v -timeout 20m:
+      timeout: 1200
+    - cd scv/src; go test -race -v -timeout 20m:
+      timeout: 1200
     - nosetests -x -v --nocapture
   post:
     - ./tests/start_services
